<resources>
  <string name="app_name">SecondHome</string>
  <string name="comecar_1parte">Find the right</string>
  <string name="comecar_2parte">home for you!</string>
  <string name="regista_titulo">Sign up!</string>
  <string name="login_titulo">Sign in!</string>
  <string name="login">Log in</string>
  <string name="password">Password</string>
  <string name="user">Username</string>
  <string name="name">Full name</string>
  <string name="contact">Phone number</string>
  <string name="register">Sign up</string>
  <string name="start">Start</string>
  <string name="noAccountQuestion">No account?</string>
  <string name="alreadyRegisteredQuestion">Already have an account?</string>
  <string name="password2">Confirm password</string>
  <string name="birthdayDate">Birthday Date</string>
  <string name="errorEmailEmpty">Email required</string>
  <string name="errorPhoneNumberEmpty">Phone number required</string>
  <string name="errorFullNameEmpty">Name required</string>
  <string name="errorUsernameEmpty">Username required</string>
  <string name="errorPasswordsEmpty">Password is empty</string>
  <string name="errorPasswordsDoNotMatch">Passwords don\'t match</string>
  <string name="errorSignUp">There was an error, please try again</string>
  <string name="successfulSignUp">Account Created, you can login now</string>
  <string name="successfulLogin">Welcome</string>
  <string name="perfil_titulo">Your account</string>
  <string name="editar">Edit account</string>
  <string name="update">Update</string>
  <string name="successfullUpdate">"Successfully Updated! "</string>
  <string name="menu_insertAds">InsertAds</string>
  <string name="menu_favorities">Favorities</string>
  <string name="menu_yourAds">MyAds</string>
  <string name="open">Open</string>
  <string name="close">Close</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_value">Up until</string>
    <string name="date">dd/mm/yy</string>
    <string name="periodOfTime">Period of time</string>
    <string name="elevator">Elevator</string>
    <string name="housing">Type of housing</string>
    <string name="airconditioning">Air Conditioning</string>
    <string name="pool">Pool</string>
    <string name="survailence">Survailence</string>
    <string name="to_date_string">To</string>
    <string name="CheckBoxesTitle">Need to have</string>
    <string name="typeOfAccommodationTitle">Type Of Accommodation</string>
  <string name="evaluationSuccessToast">Thanks for your evaluation!</string>
  <string name="evaluationFailToast">Fill all the fields!</string>
  <string name="evaluationTitle">Rate your experience:</string>
  <string name="evaluationSubtitle">In the box below, describe how was your experience or what is your advice to us for improvements:</string>
  <string name="submitButton">Submit</string>
  <string name="nStarsText">stars</string>
  <string name="defaultRatingBarSubtitle">Your rating will appear here</string>
  <string name="descriptionHint">Description:</string>
  <string name="mobility">Allows disabled mobility?</string>
  <string name="insert_pictures">Insert pictures:</string>
  <string name="number_rooms">Rooms</string>
  <string name="number_bathrooms">Bathrooms</string>
  <string name="price">Rent price</string>
  <string name="area">Area</string>
  <string name="add">Add</string>
  <string name="add_name">Advertisement name</string>
  <string name="choseImages">Choose pictures</string>
  <string name="number_images">Number of images:</string>
  <string name="errorFieldsEmpty">Please fill all fields</string>
  <string name="location">Location</string>
  <string name="ad_added">Ad published</string>
  <string name="search">Search</string>
  <string name="house_type_1">Apartment</string>
  <string name="house_type_2">Room</string>
  <string name="constructionYear">Construction Year</string>
    <string name="order_by">Order by:</string>
    <string name="distance">Distance</string>
    <string name="NameWord">Name</string>
  <string name="wifi">Has wifi?</string>
    <string name="accessibilty">Accessibility</string>
    <string name="successfulAddFav">Added to favorites</string>
    <string name="unsuccessfulAddFav">Error adding to favorites</string>
    <string name="successfulRemoveFav">Added to favorites</string>
    <string name="unsuccessfulRemoveFav">Error removing from favorites</string>
  <string name="logout">Logout</string>
  <string name="help">Help</string>
  <string name="need_help">Need any help?</string>
  <string name="contact_us">Contact us by email: secondhome@outlook.pt</string>
  <string name="title_activity_manager_ads">ManagerAds</string>
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>
  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="total_de">total de</string>
  <string name="anuncios">anuncios</string>
  <string name="delete">Delete</string>
  <string name="removed">Removed with success</string>
</resources>