<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateAds">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/updateAddAdvName"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="20dp"
                android:layout_height="35dp"
                android:hint="@string/add_name"
                android:background="@drawable/border"
                android:layout_marginHorizontal="40dp"
                android:backgroundTint="@color/darkwhite"/>

            <EditText
                android:id="@+id/updateAddLocation"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:layout_height="35dp"
                android:hint="@string/location"
                android:background="@drawable/border"
                android:layout_marginHorizontal="40dp"
                android:backgroundTint="@color/darkwhite"/>

            <CheckBox
                android:id="@+id/updateAddWifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi"
                android:layout_gravity="center"
                android:button="@null"
                android:textSize="16sp"
                android:textColor="@color/lightGray"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                />

            <CheckBox
                android:id="@+id/updateAddMobility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobility"
                android:layout_gravity="center"
                android:button="@null"
                android:textSize="16sp"
                android:textColor="@color/lightGray"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                />

            <RadioGroup
                android:id="@+id/spinner_house_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:textSize="16sp"
                android:orientation="horizontal"
                android:textColor="@color/lightGray">
                <RadioButton android:id="@+id/updateHouse_type_1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/house_type_1"/>
                <RadioButton android:id="@+id/updateHouse_type_2"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/house_type_2"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/number_rooms"
                        />

                    <EditText
                        android:id="@+id/updateAddRooms"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:paddingHorizontal="20dp"
                        android:layout_height="35dp"
                        android:backgroundTint="@color/darkwhite"
                        android:background="@drawable/border"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/number_bathrooms"
                        />

                    <EditText
                        android:id="@+id/updateAddBathrooms"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:paddingHorizontal="20dp"
                        android:layout_height="35dp"
                        android:backgroundTint="@color/darkwhite"
                        android:background="@drawable/border"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/area"
                        />

                    <EditText
                        android:id="@+id/updateAddArea"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:paddingHorizontal="20dp"
                        android:layout_height="35dp"
                        android:backgroundTint="@color/darkwhite"
                        android:background="@drawable/border"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/price"
                        />

                    <EditText
                        android:id="@+id/updateAddPrice"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:paddingHorizontal="20dp"
                        android:layout_height="35dp"
                        android:backgroundTint="@color/darkwhite"
                        android:background="@drawable/border"/>
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/updateAddConstructionYear"
                android:layout_width="match_parent"
                android:hint="@string/constructionYear"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:layout_height="35dp"
                android:inputType="number"
                android:background="@drawable/border"
                android:layout_marginHorizontal="40dp"
                android:backgroundTint="@color/darkwhite"/>

            <EditText
                android:id="@+id/updateAddEmail"
                android:layout_width="match_parent"
                android:hint="Email"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:layout_height="35dp"
                android:background="@drawable/border"
                android:layout_marginHorizontal="40dp"
                android:backgroundTint="@color/darkwhite"/>

            <EditText
                android:id="@+id/updateAddContact"
                android:layout_width="match_parent"
                android:hint="@string/contact"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:layout_height="35dp"
                android:background="@drawable/border"
                android:layout_marginHorizontal="40dp"
                android:backgroundTint="@color/darkwhite"/>

            <Button
                android:id="@+id/updateAddBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/update"
                android:textStyle="bold"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/deleteAddBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/delete"
                android:textStyle="bold"
                android:backgroundTint="#ff0000"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/white"

                android:layout_gravity="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>