<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/backArrow"
        android:layout_width="54dp"
        android:layout_height="58dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ic_baseline_arrow_back_24"/>

    <RelativeLayout
        android:id="@+id/inputsLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="300dp">

        <TextView
            android:id="@+id/tituloLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_titulo"
            android:textSize="31sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tituloLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp">

            <LinearLayout
                android:id="@+id/lInputUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_baseline_person_24" />

                <EditText
                    android:id="@+id/user_inputLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#CDCDCD"
                    android:hint="@string/user"
                    android:padding="20dp"
                    android:textAlignment="textStart"
                    android:textColorHint="#CDCDCD" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lInputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lInputUser">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_baseline_lock_24" />

                <EditText
                    android:id="@+id/pass_inputLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:backgroundTint="#CDCDCD"
                    android:hint="@string/password"
                    android:padding="20dp"
                    android:textAlignment="textStart"
                    android:textColorHint="#CDCDCD" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputsLogin"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/orangeTheme"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAccountQuestion"
            android:textColor="@color/lightGray"/>

        <TextView
            android:id="@+id/registerBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:text="@string/register"
            android:textColor="@color/lighBlue"/>

    </LinearLayout>

</RelativeLayout>