<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="700dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:id="@+id/topTitulo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/backArrowRegister"
                android:layout_width="54dp"
                android:layout_height="58dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="-10dp"
                android:layout_marginLeft="20dp"
                android:drawableTint="#545454"
                android:drawableTop="@drawable/ic_baseline_arrow_back_24"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/regista_titulo"
                android:textSize="31sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/topTitulo"
            android:layout_marginTop="50dp">

            <RelativeLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp">

                <EditText
                    android:id="@+id/email_tlm_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailOrPhone"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColorHint="#CDCDCD"
                    android:backgroundTint="#CDCDCD"/>

                <EditText
                    android:id="@+id/nome_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_tlm_input"
                    android:hint="@string/name"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColorHint="#CDCDCD"
                    android:backgroundTint="#CDCDCD" />

                <EditText
                    android:id="@+id/user_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nome_input"
                    android:hint="@string/user"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColorHint="#CDCDCD"
                    android:backgroundTint="#CDCDCD" />

                <EditText
                    android:id="@+id/pass_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_input"
                    android:hint="@string/password"
                    android:padding="20dp"
                    android:textAlignment="center"
                    android:textColorHint="#CDCDCD"
                    android:backgroundTint="#CDCDCD" />


                <Button
                    android:id="@+id/btnRegisto"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pass_input"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100dp"
                    android:backgroundTint="#FF8D69"
                    android:text="@string/register"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnRegisto"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alreadyRegisteredQuestion"
                        android:textColor="@color/lightGray"/>

                    <TextView
                        android:id="@+id/loginBlue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5sp"
                        android:text="@string/login"
                        android:textColor="@color/lighBlue"/>

                </LinearLayout>


            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>